# cpuex

./: *.ml  *.mli  .gitignore  Makefile  README.md  a.ml  alpha.cmi  alpha.cmo  alpha.ml  asm.cmi  asm.cmo  asm.ml  asm.mli  assoc.cmi  assoc.cmo  assoc.ml  beta.cmi  beta.cmo  closure.cmi  closure.cmo  closure.ml  constFold.cmi  constFold.cmo  constFold.ml  elim.cmi  elim.cmo  elim.ml  emit.cmi  emit.cmo  emit.ml  id.cmi  id.cmo  id.ml  inline.cmi  inline.cmo  inline.ml  kNormal.cmi  kNormal.cmo  kNormal.ml  kyotu.cmi  (+47 more)
._bcdi/: alpha.di  asm.di  beta.di  emit.di  inline.di  kyotu.di  regAlloc.di  typing.di
._d/: alpha.d  assoc.d  beta.d  emit.d  kyotu.d  main.d  s.d  simm.d  syntax.d  virtual.d
FPU/: .gitignore  FPUの成果物について.txt
ase2/: Cargo.toml
bunritests/: add.s  bgeu.s  call.data  call.ns  call.s  flwlabel.dataout  flwlabel.s  fmax.s  fmulnop.ns  fmulnop.s  fneg.s  fsqrt.ans  fsub.ans  grad_table.txt  in.txt  lw.ns  lw.s  mandel.s  ori.s  sll.s  slli.s  slti.s  sltiu.s  sra.s  srai.ans  sub.ans
compiler/: *.ml  Makefile  a.s  alpha.cmi  alpha.cmo  asm.cmi  asm.cmo  asm.ml  asm.mli  assoc.cmi  assoc.cmo  beta.cmo  beta.ml  closure.cmi  closure.cmo  constFold.cmi  constFold.cmo  elim.cmo  emit.cmi  emit.cmo  emit.ml  graphColoring.cmi  graphColoring.cmo  graphColoring.ml  id.cmi  id.cmo  id.ml  inline.cmi  inline.cmo  kNormal.cmi  kNormal.cmo  kNormal.ml  kyotu.cmi  kyotu.cmo  kyotu.ml  kyotu.mli  lexer.cmi  lexer.cmo  lexer.mll  lib.ml  (+48 more)
core/: ALU.sv  ALU.v  FPU.v  README.md  block_ram.v  core.v  (+12 more)
ringo/: Cargo.toml
ringo/src/: asm.lalrpop  inst.rs  main.rs
(+930 files in other folders)
