[package]
name = "ringo"
version = "0.1.0"
authors = ["cfkazu <kkkazu@g.ecc.u-tokyo.ac.jp>"]
edition = "2018"
build = "build.rs" # LALRPOP preprocessing
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = "0.19.0"
regex = "1"

# Add a build-time dependency on the lalrpop library:
[build-dependencies]
lalrpop = {version = "0.19.0",features = ["lexer"] }
